feat: full location tree CRUD - add sub-locations, edit, delete with drill-down navigation